# ohtuminiprojekti

./: .coverage  .coveragerc  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  raportti.md  run_robot_tests.sh
.github/workflows/: main.yml
src/: .coverage  StubCursor.py  StubDBConn.py  app.py  database.db  database.py  init_db.py  references_repository.py  viitteet.py
src/static/: styles.css
src/templates/: index.html  lisaa_viite.html  viitteet.html
src/tests/: references.robot  references_repository_tests.py  resource.robot  sort_acceptance.robot  tags_acceptance.robot  test_references_repository.py
